# firmware

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  environment.yml  pyproject.toml
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci-gate.yml  license-compliance.yml  nightly.yml  release.yml
controller/: Cargo.toml
controller/src/: battery_controller.rs  filesystem_controller.rs  filesystem_controller_test.rs  fountain_controller.rs  gesture_detector.rs  led_controller.rs  led_controller_test.rs  lib.rs  motor_controller.rs  sensor_controller.rs  sensor_controller_test.rs  shell_controller.rs  state_machine.rs  system_controller.rs  system_feature.rs  telemetry_controller.rs  thermal_controller.rs  types.rs
controller/tests/: controller_tests.rs  core_gating_tests.rs  filesystem_controller_tests.rs  gesture_detector_tests.rs  macro_integration_tests.rs  sensor_controller_tests.rs  shell_integration_tests.rs  shell_tests.rs  state_machine_tests.rs  system_controller_tests.rs  system_feature_tests.rs  telemetry_controller_tests.rs
gesture_detector/: Cargo.toml
gesture_detector/src/: lib.rs
gesture_detector/tests/: gesture_detector_tests.rs
lib/: Cargo.toml  build.rs
lib/src/: battery_manager.rs  cbor.rs  cli.rs  core_monitor.rs  defmt_logger.rs  flash.rs  gesture_detector.rs  heartbeat_monitor.rs  lib.rs  panic_handler.rs  periodic_timer.rs  power_manager.rs  rtt.rs  select.rs  system.rs  telemetry.rs  telemetry_test.rs  tracing.rs  types.rs  uart.rs
lib/src/panic_handler/: mod.rs  tests.rs  types.rs
lib/src/system/: battery.rs  power.rs  thermal.rs
lib/tests/: cbor_tests.rs  cli_tests.rs  core_monitor_tests.rs  defmt_logger_tests.rs  directory_tests.rs  gesture_detector_tests.rs  heartbeat_monitor_tests.rs  panic_handler_tests.rs  periodic_timer_tests.rs  select_tests.rs  system_tests.rs  telemetry_tests.rs  tracing_tests.rs
lib/tracing-mock-macros/: Cargo.toml
lib/tracing-mock-macros/src/: lib.rs
model/: Cargo.toml
model/src/: calibration.rs  lib.rs  state_machine.rs  status.rs  telemetry.rs  telemetry_test.rs  types.rs
model/src/interfaces/: charge_status.rs  charger.rs  current_sensor.rs  fuel_gauge.rs  led.rs  mod.rs  motor.rs  periodic.rs  power_sensor.rs  proximity.rs  temperature.rs  tickable.rs
model/tests/: state_machine_tests.rs  telemetry_tests.rs
panic_handler/: Cargo.toml
panic_handler/src/: lib.rs  tests.rs
peripherals/: Cargo.toml  build.rs
peripherals/src/: attiny816.rs  battery.rs  bq25185.rs  ina219.rs  l9110s.rs  lib.rs  max17048.rs  mock.rs  motor.rs  pump.rs  vl53l0x.rs  water_sensor.rs
peripherals/tests/: integration.rs
platform/: Cargo.toml  build.rs
platform/host/: Cargo.toml
platform/host/src/: lib.rs  telemetry.rs
platform/host/tests/: telemetry_integration_tests.rs  tool_common_tests.rs
platform/src/: lib.rs
platform/src/io/: i2c.rs
platform/src/power/: power.rs  thermal.rs
platform/src/services/: directory.rs
platform/src/system/: monitor.rs  panic.rs  rtt.rs  scheduler.rs  select.rs  types.rs
platform/src/telemetry/: logger.rs  tracing.rs
platform/tests/: cbor_tests.rs  cli_tests.rs  core_monitor_tests.rs  defmt_logger_tests.rs  directory_tests.rs  gesture_detector_tests.rs  multicore_contention_tests.rs  panic_handler_tests.rs  periodic_timer_tests.rs  select_tests.rs  system_tests.rs  tracing_tests.rs
platform/tracing-macros/: Cargo.toml
platform/tracing-macros/src/: lib.rs
projects/: cat_detector.md  cat_detector_bringup.yaml
projects/cat_detector/: Cargo.toml  memory.x
projects/cat_detector/.cargo/: config.toml
projects/cat_detector/src/: bsp_host.rs  bsp_target.rs  lib.rs  main.rs  multicore.rs  shell_controller.rs  shell_tests.rs  system_controller.rs  system_controller_test.rs
projects/cat_detector/tests/: board_tests.rs  integration_tests.rs  shell_integration_tests.rs  shell_tests.rs  system_controller_tests.rs
scripts/: bringup.py  build_firmware.sh  build_host_tools.sh  generate_size_report.sh  license_compliance.py  rerun-loader-csv  run_clippy.sh  run_tests.sh  validate_codebase.sh  validate_multicore_support.py  validate_tracing.py  verify.sh  zip_folder.py
scripts/tests/: test_bringup.py  test_license_compliance.py  test_rerun_loader.py  test_validate_multicore_support.py  test_validate_ram_functions.py
tools/: runner.sh  verify.sh
tools/defmt_host/: Cargo.toml
tools/defmt_host/src/: dump.rs  lib.rs  main.rs  rtt.rs  stream.rs  uart.rs
tools/defmt_host/tests/: defmt_host_tests.rs
tools/fs_tool/: Cargo.toml
tools/fs_tool/src/: flash.rs  lib.rs  main.rs
tools/fs_tool/src/commands/: cp.rs  crash_log.rs  export_telemetry.rs  mod.rs
tools/fs_tool/tests/: fs_tool_tests.rs
tools/helpers/: bringup.py  rerun-loader-csv
tools/host_cli/: Cargo.toml
tools/host_cli/src/: dump.rs  lib.rs  main.rs  rtt.rs  stream.rs  tracing.rs
tools/host_cli/tests/: host_cli_tests.rs
tools/host_fs/: Cargo.toml
tools/host_fs/src/: flash.rs  lib.rs  main.rs
tools/host_fs/src/commands/: cat.rs  cp.rs  crash_log.rs  export_telemetry.rs  format.rs  ls.rs  mod.rs  rm.rs
tools/host_fs/tests/: host_fs_tests.rs
tools/lib/: Cargo.toml
tools/lib/src/: gdb.rs  lib.rs  metadata.rs  symbolicate.rs
tools/lib/tests/: tool_common_tests.rs
tools/log_tool/: Cargo.toml
tools/log_tool/src/: lib.rs  main.rs
tools/log_tool/tests/: log_tool_tests.rs
tools/validation/: license_compliance.py  validate_codebase.sh  validate_multicore_support.py  validate_tracing.py
tools/validation/tests/: __init__.py  test_bringup.py  test_rerun_loader.py  test_validate_multicore_support.py  test_validate_tracing.py
