[workspace]
resolver = "2"
members = [
    "model",
    "peripherals",
    "controller",
    "lib",
    "projects/cat_detector",
    "tools/host_fs",
    "tools/host_cli",
    "tools/lib",
]
default-members = [
    "model",
    "peripherals",
    "controller",
    "lib",
    "projects/cat_detector",
]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Reduce codegen units to improve size optimizations
panic = "abort"          # Abort on panic to remove stack unwinding tables
strip = false            # Keep symbols and debug info for MemBrowse analysis
debug = 2                # Generate full debug symbols even for release builds

[profile.dev]
opt-level = 1            # Enable light optimization to drastically reduce async/embassy code size
debug = 2                # Full debug info (allows inspecting local variables in debugger)

[profile.test]
debug = 2            # Full debug info (allows inspecting local variables in debugger)

