[workspace]
resolver = "2"
members = [
    "model",
    "peripherals",
    "controller",
    "lib",
    "lib/tracing-macros",
    "projects/cat_detector",
    "tools/host_fs",
    "tools/host_cli",
    "tools/lib",
]
default-members = [
    "model",
    "peripherals",
    "controller",
    "lib",
    "projects/cat_detector",
]

[workspace.package]
license = "GPL-3.0-only"

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Enable Link-Time Optimization
codegen-units = 1        # Reduce codegen units to improve size optimizations
panic = "abort"          # Abort on panic to remove stack unwinding tables
strip = false            # Keep symbols and debug info for MemBrowse analysis
debug = 2                # Generate full debug symbols even for release builds

# Override release settings for host tools to avoid LNK4072 warning on Windows
[profile.release.package.host_cli]
debug = 0
strip = true

[profile.release.package.host_fs]
debug = 0
strip = true

[profile.release.package.tool_common]
debug = 0
strip = true

[profile.dev]
opt-level = 1            # Enable light optimization to drastically reduce async/embassy code size
debug = 2                # Full debug info (allows inspecting local variables in debugger)

[profile.test]
debug = 2            # Full debug info (allows inspecting local variables in debugger)

