[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
peripherals = { path = "../peripherals" }
embassy-sync = "0.6.2"
sequential-storage = "3.0.0"
embedded-storage-async = "0.4.1"
heapless = "0.8.0"
embedded-io = "0.6.0"
minicbor = "0.20.0"
embassy-futures = "0.1.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-time = { version = "0.4.0", features = ["defmt"] }
defmt = "0.3"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
embassy-time = { version = "0.4.0", features = ["std"] }

[dev-dependencies]
peripherals = { path = "../peripherals", features = ["mock"] }
futures = "0.3"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dev-dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
