[package]
name = "firmware_lib"
version = "0.1.0"
edition = "2021"
license.workspace = true
publish = false

[dependencies]
model = { path = "../model" }
embedded-cli = "0.2.1"
embedded-io = "0.6.0"
embassy-sync = "0.6.2"
embassy-time = "0.4.0"
embassy-futures = "0.1.2"
sequential-storage = "3.0.0"
embedded-storage = "0.3"
embedded-storage-async = "0.4.1"
critical-section = "1.1"
heapless = "0.8.0"
defmt = "0.3"
minicbor = { version = "0.20.0", features = ["derive"] }
tracing-defmt = { version = "0.1.2", optional = true }
tracing-mock-macros = { path = "tracing-mock-macros" }


[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-rp = { version = "0.3.0", features = ["defmt", "rp2040", "time-driver", "critical-section-impl"] }
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embedded-hal = "1.0.0"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }

[dev-dependencies]
futures = "0.3"

[features]
default = []
tracing = ["dep:tracing-defmt"]
dual-core = []

