[package]
name = "peripherals"
version = "0.1.0"
edition = "2021"

[features]
default = []
mock = []

[dependencies]
embedded-hal = "1.0.0"
model = { path = "../model" }
embedded-storage = "0.3"

[dev-dependencies]
peripherals = { path = ".", features = ["mock"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
defmt = "0.3"

