[package]
name = "peripherals"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
mock = []
tracing = ["firmware_lib/tracing", "dep:tracing-defmt", "dep:defmt"]
core1 = []
motor-core = ["core1"]
sensors-core = ["core1"]

[dependencies]
embedded-hal = "1.0.0"
model = { path = "../model" }
embedded-storage = "0.3"
firmware_lib = { path = "../lib" }
tracing-defmt = { version = "0.1.2", optional = true }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
peripherals = { path = ".", features = ["mock"] }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
defmt = "0.3"

