[package]
name = "tool_common"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
object = "0.35"
addr2line = { version = "0.22", features = ["std-object"] }
rustc-demangle = "0.1"
platform = { path = "../../platform" }
defmt-decoder = "1.1.0"
minicbor = { version = "0.20.0", features = ["derive"] }
