[package]
name = "cat_detector"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "cat_detector"
path = "src/lib.rs"

[[bin]]
name = "cat_detector"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "shell"
path = "src/bin/shell.rs"
test = true
bench = false

[dependencies]
model = { path = "../../model" }
peripherals = { path = "../../peripherals", features = ["mock"] }
controller = { path = "../../controller" }
rp2040_panic_handler = { path = "../../panic_handler" }
gesture_detector = { path = "../../gesture_detector" }
embedded-hal = "1.0.0"
embassy-sync = "0.6.2"
embedded-cli = "0.2.1"
embedded-io = "0.6.0"
sequential-storage = "3.0.0"
minicbor = { version = "0.20.0", features = ["derive"] }
quick-protobuf = { version = "0.8.0", default-features = false }
embedded-storage = "0.3"
embedded-storage-async = "0.4.1"
critical-section = "1.1"
heapless = "0.8.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
embassy-executor = { version = "0.7.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "rp2040", "time-driver"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
embassy-executor = { version = "0.7.0", features = ["arch-std", "executor-thread"] }
embassy-time = "0.4.0"
defmt = "0.3"
