[package]
name = "fs_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
sequential-storage = "3.0.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
model = { path = "../../model" }
firmware_lib = { path = "../../lib" }
minicbor = "0.24.2"
addr2line = { version = "0.22", features = ["std-object"] }
gimli = "0.29"
object = "0.35"
rustc-demangle = "0.1"
indicatif = "0.17"
probe-rs = "0.31.0"
