[package]
name = "host_cli"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
platform = { path = "../../platform" }
tool_common = { path = "../../platform/host" }
defmt-decoder = "1.1.0"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
probe-rs = { version = "0.31.0", features = [] }
indicatif = "0.17"
serialport = "4.3"
minicbor = { version = "0.20.0", features = ["derive"] }
addr2line = { version = "0.22", features = ["std-object"] }
gimli = "0.29"
object = "0.35"
rustc-demangle = "0.1"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-defmt-decoder = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0"
ctrlc = "3.4"

