[package]
name = "host_fs"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
sequential-storage = "3.0.0"
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.1"
model = { path = "../../model" }
platform = { path = "../../platform" }
tool_common = { path = "../lib" }
cat_detector = { path = "../../projects/cat_detector" }
defmt-decoder = "1.1.0"

[target.'cfg(not(all(target_arch = "arm", target_os = "none")))'.dependencies]
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
minicbor = { version = "0.20.0", features = ["derive"] }
addr2line = { version = "0.22", features = ["std-object"] }
gimli = "0.29"
object = "0.35"
rustc-demangle = "0.1"
indicatif = "0.17"
probe-rs = "0.31.0"
